[package]
name = "agent-test2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
crossbeam = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
itertools = "0.10.3"
async-trait = "0.1.56"